# ncsfund

./: README.md
l1_e2/src/: main.c
l2_e1/: CMakeLists.txt  app.overlay
l2_e1/src/: main.c
l2_e2/src/: main.c
l3_e1/: CMakeLists.txt
l3_e1/src/: main.c
l3_e2/: CMakeLists.txt  Kconfig  promicro_nrf52840_nrf52840_uf2.overlay
l3_e2/src/: main.c
l4_e1/src/: main.c
l4_e2/src/: main.c
l4_e3/: CMakeLists.txt
l4_e3/src/: main.c
l5_e1/: CMakeLists.txt  prj.conf  promicro_nrf52840_nrf52840_uf2.overlay
l5_e1/src/: main.c
l6_e1/: CMakeLists.txt  prj.conf  promicro_nrf52840_nrf52840_uf2.overlay
l6_e1/src/: app_i2c.c  app_i2c.h  bmx280.c  bmx280.h  main.c  util.h
l7_e1/: CMakeLists.txt
l7_e1/src/: main.c
l7_e2/: CMakeLists.txt  prj.conf
l7_e2/src/: main.c
l7_e3/: CMakeLists.txt
l7_e3/src/: main.c
l8_e1/: CMakeLists.txt  prj.conf
l8_e1/src/: main.c
l8_e2/: CMakeLists.txt  prj.conf
l8_e2/src/: main.c
